--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gatsby-source-contentful": "^7.5.0",
     "gatsby-source-filesystem": "^4.7.0",
     "gatsby-transformer-sharp": "^4.7.0",
+    "netlify": "^11.0.0",
+    "netlify-cli": "^9.8.0",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
