--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/react": "^2.0.0",
     "dotenv": "^16.0.0",
     "gatsby": "^4.7.2",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
     "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-manifest": "^4.7.0",
